Re-format Constants file and streamline screens

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,10 @@ flutter:
   fonts:
     - family: Caveat
       fonts:
-        - asset: assets/fonts/Caveat-Bold.ttf
         - asset: assets/fonts/Caveat-Regular.ttf
+    - family: Lato
+      fonts:
+        - asset: assets/fonts/Lato-Light.ttf
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
